--- a/kubernetes/order-hpa.yml
+++ b/kubernetes/order-hpa.yml
@@ -1,7 +1,7 @@
 apiVersion: autoscaling/v2
 kind: HorizontalPodAutoscaler
 metadata:
-  name: hpa
+  name: order-hpa
 spec:
   scaleTargetRef:
     apiVersion: apps/v1
