--- a/kubernetes/wedding-watches-deployment.yml
+++ b/kubernetes/wedding-watches-deployment.yml
@@ -18,7 +18,7 @@ spec:
     spec:
       containers:
       - name: wedding-watches
-        image: training16.azurecr.io/folex/wedding-watches:latest
+        image: folexcontainerregistry.azurecr.io/folex/wedding-watches:latest
         ports:
         - containerPort: 443
         - containerPort: 80
