--- a/wedding-watches/.gitignore
+++ b/wedding-watches/.gitignore
@@ -1,34 +1,23 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+node_modules
 
-# Dependencies
-/node_modules
-/.pnp
-.pnp.js
-
-# Testing
-/coverage
-
-# Next.js
-/.next/
-/out/
-
-# Production
+# Output
+.output
+.vercel
+.netlify
+.wrangler
+/.svelte-kit
 /build
 
-# Misc
+# OS
 .DS_Store
-*.pem
+Thumbs.db
 
-# Debug
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+# Env
+.env
+.env.*
+!.env.example
+!.env.test
 
-# Local ENV files
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-
-# Vercel
-.vercel
+# Vite
+vite.config.js.timestamp-*
+vite.config.ts.timestamp-*
