--- a/wedding-watches/package.json
+++ b/wedding-watches/package.json
@@ -1,75 +1,33 @@
 {
-  "repository": "https://github.com/vercel/examples.git",
-  "license": "MIT",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint",
-    "analyze": "BUNDLE_ANALYZE=both yarn build",
-    "find:unused": "next-unused"
-  },
-  "next-unused": {
-    "alias": {
-      "@lib/*": [
-        "lib/*"
-      ],
-      "@assets/*": [
-        "assets/*"
-      ],
-      "@config/*": [
-        "config/*"
-      ],
-      "@components/*": [
-        "components/*"
-      ],
-      "@utils/*": [
-        "utils/*"
-      ]
-    },
-    "debug": true,
-    "include": [
-      "components",
-      "lib",
-      "pages",
-      "sections"
-    ],
-    "exclude": [],
-    "entrypoints": [
-      "pages"
-    ]
-  },
-  "dependencies": {
-    "@builder.io/personalization-utils": "0.0.7",
-    "@builder.io/react": "^1.1.47",
-    "@builder.io/utils": "^1.0.4",
-    "@szhsin/react-menu": "^2.3.3",
-    "@types/js-cookie": "^3.0.1",
-    "@vercel/fetch": "^6.1.1",
-    "atob": "^2.1.2",
-    "jest": "^27.4.7",
-    "js-cookie": "^3.0.1",
-    "next": "^12.1.0",
-    "next-seo": "^5.1.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-icons": "^4.3.1",
-    "react-merge-refs": "^1.1.0",
-    "react-tiny-fab": "^4.0.4"
-  },
-  "devDependencies": {
-    "@next/bundle-analyzer": "^12.0.10",
-    "@types/node": "^17.0.14",
-    "@types/react": "^17.0.38",
-    "autoprefixer": "^10.4.2",
-    "eslint": "^8.9.0",
-    "eslint-config-next": "canary",
-    "postcss": "^8.4.6",
-    "tailwindcss": "^3.0.18",
-    "typescript": "^4.5.5"
-  },
-  "resolutions": {
-    "webpack": "^5.0.0-beta.30"
-  }
+	"name": "wedding-watches",
+	"private": true,
+	"version": "0.0.1",
+	"type": "module",
+	"scripts": {
+		"dev": "vite dev",
+		"build": "vite build",
+		"preview": "vite preview",
+		"prepare": "svelte-kit sync || echo ''",
+		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
+		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch"
+	},
+	"devDependencies": {
+		"@sveltejs/adapter-auto": "^4.0.0",
+		"@sveltejs/adapter-node": "^5.2.12",
+		"@sveltejs/kit": "^2.16.0",
+		"@sveltejs/vite-plugin-svelte": "^5.0.0",
+		"@tailwindcss/forms": "^0.5.9",
+		"@tailwindcss/typography": "^0.5.15",
+		"@tailwindcss/vite": "^4.0.0",
+		"@types/amqplib": "^0.10.7",
+		"svelte": "^5.0.0",
+		"svelte-check": "^4.0.0",
+		"tailwindcss": "^4.0.0",
+		"typescript": "^5.0.0",
+		"vite": "^6.2.5"
+	},
+	"dependencies": {
+		"amqplib": "^0.10.7",
+		"dotenv": "^16.4.7"
+	}
 }
