--- a/workflow-dep.yml
+++ b/workflow-dep.yml
@@ -17,7 +17,14 @@ spec:
     spec:
       containers:
       - name: workflow-service
-        image: training16.azurecr.io/folex
+        image: training16.azurecr.io/folex-workflow
+        resources:
+          requests:
+            cpu: "200m"
+            memory: "256Mi"
+          limits:
+            cpu: "500m"
+            memory: "512Mi"
         envFrom:
         - configMapRef:
             name: workflow-config
