--- a/workflow-dep.yml
+++ b/workflow-dep.yml
@@ -26,7 +26,7 @@ spec:
             cpu: "500m"
             memory: "512Mi"
         envFrom:
-        - configMapRef:
-            name: workflow-config
+        - secretRef:
+            name: workflow-secrets
         ports:
         - containerPort: 8080
