--- a/kubernetes/rabbitmq-service.yml
+++ b/kubernetes/rabbitmq-service.yml
@@ -1,11 +1,11 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: rabbitmq
+  name: rabbit
   namespace: folex-dev
 spec:
   selector:
-    app: rabbitmq
+    app: rabbit
   ports:
     - name: amqp
       port: 5672
