--- a/kubernetes/wedding-watches-service.yml
+++ b/kubernetes/wedding-watches-service.yml
@@ -17,4 +17,7 @@ spec:
     protocol: TCP
     port: 443
     targetPort: 443
+  - name: listen
+    port: 3000
+    targetPort: 3000
   type: LoadBalancer
