wedding watches hpa

--- a/kubernetes/wedding-watches-deployment.yml
+++ b/kubernetes/wedding-watches-deployment.yml
@@ -26,3 +26,8 @@ spec:
         envFrom:
         - secretRef:
             name: wedding-watches-secret
+        resources:
+          limits:
+            cpu: 100m
+          requests:
+            cpu: 50m
