--- a/kubernetes/order-deployment.yml
+++ b/kubernetes/order-deployment.yml
@@ -23,7 +23,7 @@ spec:
         - containerPort: 8080
         envFrom:
           - secretRef:
-              name: sc-orderservicesc-secret
+              name: order-service-secret
         resources:
           limits:
             cpu: 100m
