--- a/kubernetes/factory-service.yml
+++ b/kubernetes/factory-service.yml
@@ -1,13 +1,13 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: order-service
+  name: factory-service
   labels:
-    app: order-service
+    app: factory
 
 spec:
   selector:
-    app: order-service
+    app: factory
   ports:
   - protocol: TCP
     port: 8080
