hpa and liveness probes

--- a/kubernetes/order-deployment.yml
+++ b/kubernetes/order-deployment.yml
@@ -23,9 +23,14 @@ spec:
         - containerPort: 8080
         envFrom:
           - secretRef:
-              name: sc-orderservicesc-secret
+              name: order-service-secret
         resources:
           limits:
-            cpu: 100m
+            cpu: 1000m
           requests:
-            cpu: 50m
+            cpu: 100m
+        livenessProbe:
+          tcpSocket:
+            port: 8080
+          initialDelaySeconds: 60
+          periodSeconds: 10
