--- a/kubernetes/workflow-dep.yml
+++ b/kubernetes/workflow-dep.yml
@@ -17,16 +17,21 @@ spec:
     spec:
       containers:
       - name: workflow-service
-        image: training16.azurecr.io/folex-workflow
+        image: training16.azurecr.io/folex/workflow
         resources:
           requests:
-            cpu: "200m"
+            cpu: "20m"
             memory: "256Mi"
           limits:
-            cpu: "500m"
+            cpu: "700m"
             memory: "512Mi"
         envFrom:
         - secretRef:
             name: workflow-secrets
         ports:
         - containerPort: 8080
+        livenessProbe:
+          tcpSocket: 
+            port: 8080
+          initialDelaySeconds: 60
+          periodSeconds: 10
