--- a/kubernetes/wedding-watches-deployment.yml
+++ b/kubernetes/wedding-watches-deployment.yml
@@ -25,4 +25,16 @@ spec:
         - containerPort: 3000
         envFrom:
         - secretRef:
-            name: wedding-watches-sc
+            name: wedding-watches-secret
+        resources:
+          limits:
+            cpu: 100m
+          requests:
+            cpu: 10m
+        livenessProbe:
+          httpGet:
+            path: /
+            port: 3000
+          initialDelaySeconds: 60
+          periodSeconds: 10
+          timeoutSeconds: 15
