adjust terraform dev pipeline so that terraform task explicitly checks that branch is master

--- a/terraform-pipeline-dev.yml
+++ b/terraform-pipeline-dev.yml
@@ -14,7 +14,7 @@ resources:
 
 jobs:
 - job: Terraform
-  condition: succeeded()
+  condition: and(succeeded(), eq(variables['Build.SourceBranchName'], 'master'))
   pool:
     name: sigma
 
