trying helm in separate namespace for now

--- a/helm/templates/rabbitmq-deployment.yml
+++ b/helm/templates/rabbitmq-deployment.yml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: rabbit
-  namespace: folex-dev
+  namespace: folex-dev-test
   labels:
     app: rabbit
 spec:
