--- a/helm/templates/factory-deployment.yml
+++ b/helm/templates/factory-deployment.yml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: factory
-  namespace: folex-dev
+  namespace: folex-dev-test
   labels:
     app: factory
 
