--- a/helm/templates/factory-service.yml
+++ b/helm/templates/factory-service.yml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: factory-service
-  namespace: folex-dev
+  namespace: folex-dev-test
   labels:
     app: factory
 
