--- a/helm/templates/order-deployment.yml
+++ b/helm/templates/order-deployment.yml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: order-service
-  namespace: folex-dev
+  namespace: folex-dev-test
   labels:
     app: order-service
 
