--- a/helm/templates/order-service.yml
+++ b/helm/templates/order-service.yml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: order-service
-  namespace: folex-dev
+  namespace: folex-dev-test
   labels:
     app: order-service
 
