--- a/helm/templates/rabbitmq-service.yml
+++ b/helm/templates/rabbitmq-service.yml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: rabbit
-  namespace: folex-dev
+  namespace: folex-dev-test
 spec:
   selector:
     app: rabbit
