--- a/helm/templates/workflow-dep.yml
+++ b/helm/templates/workflow-dep.yml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: workflow
-  namespace: folex-dev
+  namespace: folex-dev-test
   labels:
     app: workflow
 spec:
