--- a/helm/templates/workflow-hpa.yml
+++ b/helm/templates/workflow-hpa.yml
@@ -2,7 +2,7 @@ apiVersion: autoscaling/v2
 kind: HorizontalPodAutoscaler
 metadata:
   name: workflow-hpa
-  namespace: folex-dev
+  namespace: folex-dev-test
 spec:
   scaleTargetRef:
     apiVersion: apps/v1
