--- a/helm/templates/workflow-serv.yml
+++ b/helm/templates/workflow-serv.yml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: workflow
-  namespace: folex-dev
+  namespace: folex-dev-test
 spec:
   type: ClusterIP
   ports:
