--- a/azure-pipeline.yml
+++ b/azure-pipeline.yml
@@ -131,6 +131,10 @@ jobs:
       inputs:
         kubectlVersion: latest
 
+    - script: |
+        curl -sL https://aka.ms/InstallAzureCLIDeb | sudo bash
+      displayName: 'Install Azure CLI'
+
     - task: AzureCLI@2
       inputs:
         azureSubscription: folex-service-connection
