--- a/wedding-watches/Dockerfile
+++ b/wedding-watches/Dockerfile
@@ -9,6 +9,7 @@ COPY *.json ./
 COPY src ./src
 COPY static ./static
 COPY .npmrc /root/.npmrc
+COPY folexca.pem /folexca.pem
 
 RUN npm install
 RUN npm run build
