--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -59,3 +59,26 @@ services:
       RABBITMQ_DEFAULT_PASS: folex
     ports:
       - "9082:15672"
+
+  wedding-watches:
+    build:
+      context: ./wedding-watches
+    environment:
+      QUEUE_URL: rabbit
+      QUEUE_USERNAME: folex
+      QUEUE_PASSWORD: folex
+      ORIGIN: https://127.0.0.1
+      NODE_EXTRA_CA_CERTS: /folexca.pem
+    ports:
+      - "3000:3000"
+
+  watch-order:
+    image: nginx
+    hostname: watch-order
+    volumes:
+      - './nginx/nginx.conf:/etc/nginx/conf.d/default.conf'
+      - './certs/watch-order.key:/watch-order.key'
+      - './certs/watch-order.crt:/watch-order.crt'
+    ports:
+    - "443:443"
+    
